--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -23,6 +23,7 @@ Resources:
         - Key: Project
           Value: Dovetail
       Name: !Ref Domain
+
   Text:
     Type: AWS::Route53::RecordSetGroup
     Properties:
@@ -184,64 +185,75 @@ Resources:
           AliasTarget:
             DNSName: dqos2vqrtnmab.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
-  Aws:
+  AwsAcmLegacyUsEast1:
     Type: AWS::Route53::RecordSetGroup
     Properties:
-      Comment: AWS ACM, etc
+      Comment: AWS ACM validation records for prx-legacy in us-east-1
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
+        # *.prxu.org
+        - Name: !Sub _4523c88a53cb676ba587436bd336533a.${Domain}
+          ResourceRecords:
             - _f3ac86df105ba2b541203e3c55fc1a0b.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _4523c88a53cb676ba587436bd336533a.${Domain}
-        - ResourceRecords:
+        # TODO
+        - Name: !Sub _27bbc5f87c001a6920754062a0e9b5cf.${Domain}
+          ResourceRecords:
             - _a1223e715b9fc43c557b8daf3fa0df78.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _27bbc5f87c001a6920754062a0e9b5cf.${Domain}
-        - ResourceRecords:
+        # *.staging.prxu.org
+        - Name: !Sub _f79a9b60b3cc01c7bb92efc883e97072.staging.${Domain}
+          ResourceRecords:
             - _f861f90a68649e60ad5f2de282b8aaa7.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _f79a9b60b3cc01c7bb92efc883e97072.staging.${Domain}
-        - ResourceRecords:
+        # f.prxu.org
+        - Name: !Sub _74e5807bd6880b68587c2229f31da388.f.${Domain}
+          ResourceRecords:
             - _e2229961e29245b3fcd1ebae37d197a6.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _74e5807bd6880b68587c2229f31da388.f.${Domain}
-        - ResourceRecords:
+        # f-staging.prxu.org
+        - Name: !Sub _2f3c5aecd315d2d282ca7d7502a997b4.f-staging.${Domain}
+          ResourceRecords:
             - _9cc6c2291c9a14e3f47e150649921b1e.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _2f3c5aecd315d2d282ca7d7502a997b4.f-staging.${Domain}
-        - ResourceRecords:
+        # dovetail-cdn.prxu.org
+        - Name: !Sub _14890aeee5f89db0303658b97db3e223.dovetail-cdn.${Domain}
+          ResourceRecords:
             - _eb91f077232ecd07ccc5577e38f044dc.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _14890aeee5f89db0303658b97db3e223.dovetail-cdn.${Domain}
-        - ResourceRecords:
+        # dovetail-cdn-staging.prxu.org
+        - Name: !Sub _c0a78e4dc0641158468774cfeec66f6e.dovetail-cdn-staging.${Domain}
+          ResourceRecords:
             - _b91071c10a4b4ac682e4556bbca3f2f1.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _c0a78e4dc0641158468774cfeec66f6e.dovetail-cdn-staging.${Domain}
-        - ResourceRecords:
+        # a.prxu.org
+        - Name: !Sub _b8dd66197d6cc156051d931a5f7ecdd9.a.${Domain}
+          ResourceRecords:
             - _9d5735ed912db035b64fcd06ee2cc188.tfmgdnztqk.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _b8dd66197d6cc156051d931a5f7ecdd9.a.${Domain}
-        - ResourceRecords:
+        # ryan-cdn.prxu.org
+        - Name: !Sub _75d78367cfe3cd325df71e6dfd29a2ef.ryan-cdn.${Domain}
+          ResourceRecords:
             - _5fc354300b4b7053d26a30e3b2020104.vtqfhvjlcp.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _75d78367cfe3cd325df71e6dfd29a2ef.ryan-cdn.${Domain}
-        - ResourceRecords:
+        # dovetail.prxu.org
+        - Name: !Sub _2438aa435885db79cf05cee35c07f8be.dovetail.${Domain}
+          ResourceRecords:
             - _04ab9dffe43eee890cf363d69cc4174b.bbfvkzsszw.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _2438aa435885db79cf05cee35c07f8be.dovetail.${Domain}
-        - ResourceRecords:
+        # dovetail.staging.prxu.org
+        - Name: !Sub _589f46f13e0f94282e8bff06fc04380f.dovetail.staging.${Domain}
+          ResourceRecords:
             - _025d6c6bbdecb7604a31119313ada254.bbfvkzsszw.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _589f46f13e0f94282e8bff06fc04380f.dovetail.staging.${Domain}
