--- a/dns/studio360.org-hosted_zone.yml
+++ b/dns/studio360.org-hosted_zone.yml
@@ -1,12 +1,13 @@
 # dns/studio360.org-hosted_zone.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
-  Hosted zone and record sets for studio360.org
+Description: Hosted zone and record sets for studio360.org
+
 Parameters:
   Domain:
     Default: studio360.org.
     Description: The domain name and hosted zone
     Type: String
+
 Resources:
   HostedZone:
     Type: AWS::Route53::HostedZone
@@ -16,11 +17,12 @@ Resources:
       HostedZoneTags:
         - Key: Project
           Value: Studio 360
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       Name: !Ref Domain
+
   Pantheon:
     Type: AWS::Route53::RecordSetGroup
     Properties:
@@ -33,8 +35,8 @@ Resources:
           Type: A
           Name: !Ref Domain
         - ResourceRecords:
-            - "2620:12a:8000:0:0:0:0:3"
-            - "2620:12a:8001:0:0:0:0:3"
+            - 2620:12a:8000:0:0:0:0:3
+            - 2620:12a:8001:0:0:0:0:3
           TTL: "3600"
           Type: AAAA
           Name: !Ref Domain
@@ -73,11 +75,11 @@ Resources:
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
-            - "1 ASPMX.L.GOOGLE.COM."
-            - "5 ALT1.ASPMX.L.GOOGLE.COM."
-            - "5 ALT2.ASPMX.L.GOOGLE.COM."
-            - "10 ASPMX2.GOOGLEMAIL.COM."
-            - "10 ASPMX3.GOOGLEMAIL.COM."
+            - 1 ASPMX.L.GOOGLE.COM.
+            - 5 ALT1.ASPMX.L.GOOGLE.COM.
+            - 5 ALT2.ASPMX.L.GOOGLE.COM.
+            - 10 ASPMX2.GOOGLEMAIL.COM.
+            - 10 ASPMX3.GOOGLEMAIL.COM.
           TTL: "3600"
           Type: MX
           Name: !Ref Domain
