--- a/dns/trax.fm-hosted-zone.yml
+++ b/dns/trax.fm-hosted-zone.yml
@@ -1,28 +1,30 @@
 # dns/trax.fm-hosted_zone.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
-  Hosted zone and record sets for trax.fm
+Description: Hosted zone and record sets for trax.fm
+
 Parameters:
   Domain:
     Default: trax.fm.
     Description: The domain name and hosted zone
     Type: String
+
 Resources:
   HostedZone:
-    Type: "AWS::Route53::HostedZone"
+    Type: AWS::Route53::HostedZone
     Properties:
       HostedZoneConfig:
         Comment: Primary TRAX domain
       HostedZoneTags:
         - Key: Project
           Value: trax.fm
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       Name: !Ref Domain
+
   Text:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       # Route53 expects TXT record values to be enclosed in double quotes, so in
       # the YAML they need to be double-quoted.
@@ -54,31 +56,31 @@ Resources:
           Type: TXT
           Name: !Sub trax._domainkey.${Domain}
   GSuite:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: G Suite
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
-            - "1 ASPMX.L.GOOGLE.COM."
-            - "5 ALT1.ASPMX.L.GOOGLE.COM."
-            - "5 ALT2.ASPMX.L.GOOGLE.COM."
-            - "10 ASPMX2.GOOGLEMAIL.COM."
-            - "10 ASPMX3.GOOGLEMAIL.COM."
+            - 1 ASPMX.L.GOOGLE.COM.
+            - 5 ALT1.ASPMX.L.GOOGLE.COM.
+            - 5 ALT2.ASPMX.L.GOOGLE.COM.
+            - 10 ASPMX2.GOOGLEMAIL.COM.
+            - 10 ASPMX3.GOOGLEMAIL.COM.
           TTL: "300"
           Type: MX
           Name: !Ref Domain
   Squarespace:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: Squarespace
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
-            - "198.185.159.144"
-            - "198.185.159.145"
-            - "198.49.23.144"
-            - "198.49.23.145"
+            - 198.185.159.144
+            - 198.185.159.145
+            - 198.49.23.144
+            - 198.49.23.145
           TTL: "300"
           Type: A
           Name: !Ref Domain
@@ -93,7 +95,7 @@ Resources:
           Type: CNAME
           Name: !Sub 7k9faptab68jpw26h62y.${Domain}
   Zendesk:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: Zendesk
       HostedZoneId: !Ref HostedZone
