--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1,12 +1,13 @@
 # dns/prx.org-hosted_zone.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
-  Hosted zone and record sets for prx.org
+Description: Hosted zone and record sets for prx.org
+
 Parameters:
   Domain:
     Default: prx.org.
     Description: The domain name and hosted zone
     Type: String
+
 Resources:
   HostedZone:
     Type: "AWS::Route53::HostedZone"
@@ -21,6 +22,7 @@ Resources:
       #   - Key: Project
       #     Value: radiotopia.fm
       Name: !Ref Domain
+
   Text:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
@@ -1491,97 +1493,113 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _812f2ace0001ab6d5f847b1b513e7231.soundschool.${Domain}
-  Aws:
-    Type: "AWS::Route53::RecordSetGroup"
+  AwsAcmLegacyUsEast1:
+    Type: AWS::Route53::RecordSetGroup
     Properties:
-      Comment: AWS ACM, etc
+      Comment: AWS ACM validation records for prx-legacy in us-east-1
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
-            - _3be53bb29ca3174c2bf7d3af1ba8138d.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _81a7e2b5cf0c4f79d7188da0f03ae72d.${Domain}
-        - ResourceRecords:
-            - _8f30879a8a9a0d132885fba98b38f78a.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _265f020ebc4af9d79a6e4079a4fc72b6.backsaw.${Domain}
-        - ResourceRecords:
-            - _b723750b6c4dd2b56d92bec85cbf575e.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _ed818192c01d69685019f0df4a93b99d.cdn.allusionist.${Domain}
-        - ResourceRecords:
-            - _bcd204f81f26c5e2d4644e2a799e8965.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _d5d3126a9ebf5763eeabec3b0c91cf7f.cdn-allusionist.${Domain}
-        - ResourceRecords:
-            - _ec7e44da2ad2e5f0def8682144d83c6d.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _49790bcba62376a77d03ff169fde946a.cdn.reveal.${Domain}
-        - ResourceRecords:
-            - _6422d90655dea26fb64242eec0459ede.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _ad9004a66622eb27bec8d010561361ea.cdn-reveal.${Domain}
-        - ResourceRecords:
-            - _4ce52ca1a07e39ab0c68b5d2ac294210.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _a544dad876ab54f2e7cd244158b65ea7.media.${Domain}
-        - ResourceRecords:
-            - _dd2283fe6b42a7526f7b9739e0638906.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _32d33e14d4cd8184f3bc20cb3a7196f8.assets.${Domain}
-        - ResourceRecords:
-            - _60dffc2d9ad10247fa937a2c9363a8dc.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _4e92e0c7ba90a9161b249e971d78bb34.assets1.${Domain}
-        - ResourceRecords:
-            - _dd8fc717a9e1812a20ca609d2673b50e.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _9664e08413d050d9ce94ac5e7ba8d11c.assets2.${Domain}
-        - ResourceRecords:
-            - _e829af98d504966c824f814e5235d3f8.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _13508a876b64465c58be4bfe738438d3.beta.${Domain}
-        - ResourceRecords:
-            - _2b3bfdcd1d1cc385a835e1817c9d85e9.nhqijqilxf.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _f3668666f8f3d4e418cd356d3b9a2b24.proxy.${Domain}
-        - ResourceRecords:
-            - _02d6b548b20de21df506dda97d2d93cf.nhqijqilxf.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _77f825fef8e66773824cae9664b30f4b.www.${Domain}
-        - ResourceRecords:
-            - _78f937ab800800d5b4e66192d62246d9.auiqqraehs.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _9784f5f1de33eb78c3db79157146f598.youthradioleaders.${Domain}
-        - ResourceRecords:
-            - _a8bee31e51e6de781121aed08bcbf4d1.hkmpvcwbzw.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _c734a125558ad81f4bddc3bf33a25a24.staging.${Domain}
-        - ResourceRecords:
+        # play.prx.org
+        - Name: !Sub _8d09676a833865f3cf06c51a75ead3e6.play.${Domain}
+          ResourceRecords:
             - _0902f8141c71ef447fee9033925c4428.hkmpvcwbzw.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _8d09676a833865f3cf06c51a75ead3e6.play.${Domain}
-        - ResourceRecords:
+        # prx.org
+        - Name: !Sub _81a7e2b5cf0c4f79d7188da0f03ae72d.${Domain}
+          ResourceRecords:
+            - _3be53bb29ca3174c2bf7d3af1ba8138d.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # www.prx.org
+        - Name: !Sub _77f825fef8e66773824cae9664b30f4b.www.${Domain}
+          ResourceRecords:
+            - _02d6b548b20de21df506dda97d2d93cf.nhqijqilxf.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # proxy.prx.org
+        - Name: !Sub _f3668666f8f3d4e418cd356d3b9a2b24.proxy.${Domain}
+          ResourceRecords:
+            - _2b3bfdcd1d1cc385a835e1817c9d85e9.nhqijqilxf.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # assets.prx.org
+        - Name: !Sub _32d33e14d4cd8184f3bc20cb3a7196f8.assets.${Domain}
+          ResourceRecords:
+            - _dd2283fe6b42a7526f7b9739e0638906.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # assets1.prx.org
+        - Name: !Sub _4e92e0c7ba90a9161b249e971d78bb34.assets1.${Domain}
+          ResourceRecords:
+            - _60dffc2d9ad10247fa937a2c9363a8dc.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # assets2.prx.org
+        - Name: !Sub _9664e08413d050d9ce94ac5e7ba8d11c.assets2.${Domain}
+          ResourceRecords:
+            - _dd8fc717a9e1812a20ca609d2673b50e.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        - Name: !Sub _13508a876b64465c58be4bfe738438d3.beta.${Domain}
+          ResourceRecords:
+            - _e829af98d504966c824f814e5235d3f8.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # cdn.allusionist.prx.org
+        - Name: !Sub _ed818192c01d69685019f0df4a93b99d.cdn.allusionist.${Domain}
+          ResourceRecords:
+            - _b723750b6c4dd2b56d92bec85cbf575e.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # cdn-allusionist.prx.org
+        - Name: !Sub _d5d3126a9ebf5763eeabec3b0c91cf7f.cdn-allusionist.${Domain}
+          ResourceRecords:
+            - _bcd204f81f26c5e2d4644e2a799e8965.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # backsaw.prx.org
+        - Name: !Sub _265f020ebc4af9d79a6e4079a4fc72b6.backsaw.${Domain}
+          ResourceRecords:
+            - _8f30879a8a9a0d132885fba98b38f78a.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # cdn.reveal.prx.org
+        - Name: !Sub _49790bcba62376a77d03ff169fde946a.cdn.reveal.${Domain}
+          ResourceRecords:
+            - _ec7e44da2ad2e5f0def8682144d83c6d.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # cdn-reveal.prx.org
+        - Name: !Sub _ad9004a66622eb27bec8d010561361ea.cdn-reveal.${Domain}
+          ResourceRecords:
+            - _6422d90655dea26fb64242eec0459ede.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # media.prx.org
+        - Name: !Sub _a544dad876ab54f2e7cd244158b65ea7.media.${Domain}
+          ResourceRecords:
+            - _4ce52ca1a07e39ab0c68b5d2ac294210.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # youthradioleaders.prx.org
+        - Name: !Sub _9784f5f1de33eb78c3db79157146f598.youthradioleaders.${Domain}
+          ResourceRecords:
+            - _78f937ab800800d5b4e66192d62246d9.auiqqraehs.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # staging.prx.org
+        - Name: !Sub _c734a125558ad81f4bddc3bf33a25a24.staging.${Domain}
+          ResourceRecords:
+            - _a8bee31e51e6de781121aed08bcbf4d1.hkmpvcwbzw.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # feeder.prx.org
+        - Name: !Sub _16d5396a2320cf95e39991f091461469.feeder.${Domain}
+          ResourceRecords:
             - _22643ddfaf18052fb2db89f0e05cc559.zjfbrrwmzc.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _16d5396a2320cf95e39991f091461469.feeder.${Domain}
   Classy:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
