--- a/dns/radiotopia.com-hosted_zone.yml
+++ b/dns/radiotopia.com-hosted_zone.yml
@@ -1,28 +1,30 @@
 # dns/radiotopia.com-hosted_zone.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
-  Hosted zone and record sets for radiotopia.com
+Description: Hosted zone and record sets for radiotopia.com
+
 Parameters:
   Domain:
     Default: radiotopia.com.
     Description: The domain name and hosted zone
     Type: String
+
 Resources:
   HostedZone:
-    Type: "AWS::Route53::HostedZone"
+    Type: AWS::Route53::HostedZone
     Properties:
       HostedZoneConfig:
         Comment: Secondary Radiotopia domain
       HostedZoneTags:
         - Key: Project
           Value: radiotopia.fm
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       Name: !Ref Domain
+
   Website:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: WWW
       HostedZoneId: !Ref HostedZone
@@ -52,7 +54,7 @@ Resources:
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
   Text:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       # Route53 expects TXT record values to be enclosed in double quotes, so in
       # the YAML they need to be double-quoted.
@@ -68,33 +70,35 @@ Resources:
           Type: TXT
           Name: !Ref Domain
   GSuite:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: G Suite
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
-            - "1 ASPMX.L.GOOGLE.COM."
-            - "5 ALT1.ASPMX.L.GOOGLE.COM."
-            - "5 ALT2.ASPMX.L.GOOGLE.COM."
-            - "10 ASPMX2.GOOGLEMAIL.COM."
-            - "10 ASPMX3.GOOGLEMAIL.COM."
+            - 1 ASPMX.L.GOOGLE.COM.
+            - 5 ALT1.ASPMX.L.GOOGLE.COM.
+            - 5 ALT2.ASPMX.L.GOOGLE.COM.
+            - 10 ASPMX2.GOOGLEMAIL.COM.
+            - 10 ASPMX3.GOOGLEMAIL.COM.
           TTL: "300"
           Type: MX
           Name: !Ref Domain
-  Aws:
-    Type: "AWS::Route53::RecordSetGroup"
+  AwsAcmLegacyUsEast1:
+    Type: AWS::Route53::RecordSetGroup
     Properties:
-      Comment: AWS ACM, etc
+      Comment: AWS ACM validation records for prx-legacy in us-east-1
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
+        # radiotopia.com
+        - Name: !Sub _f79ddcfb3f0b225f0be20cb614b97c74.${Domain}
+          ResourceRecords:
             - _fa9fe6a08ee0195675ecafb06004fa84.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _f79ddcfb3f0b225f0be20cb614b97c74.${Domain}
-        - ResourceRecords:
+        # www.radiotopia.com
+        - Name: !Sub _47a8401b0245e2927391b0045ba815a0.www.${Domain}
+          ResourceRecords:
             - _fdcf4011594cf3db9d53770ce91c1a1c.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub _47a8401b0245e2927391b0045ba815a0.www.${Domain}
