Update name tag

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -90,10 +90,7 @@ Resources:
         - "*.pri.org"
         - !GetAtt Constants.VanityAlbDomain
       Tags:
-        - Key: Name
-          Value: !Sub >-
-            Wildcard for ${EnvironmentTypeAbbreviation} shared ALB
-            ${Alb.LoadBalancerName}
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_${Alb.LoadBalancerName}" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
