--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -46,7 +46,7 @@ Resources:
         Bucket: !Ref CodeS3Bucket
         Key: lambda/PRX-upload.prx.org.zip
         Version: !Ref CodeS3ObjectVersion
-      Description: File upload Lambda function
+      Description: !Sub ${EnvironmentType} S3 signing service Lambda function
       Environment:
         Variables:
           ACCESS_KEY: !GetAtt UploadHttpSigningAccessKey.SecretAccessKey
