--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -1,6 +1,7 @@
 # stacks/proxy.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Top-level proxy server for www.prx.org
+Transform: AWS::Serverless-2016-10-31
 Conditions:
   CreateStagingResources: !Equals [!Ref EnvironmentType, Staging]
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
