Use payload format version 1.0

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -309,12 +309,14 @@ Resources:
             ApiId: !Ref ProxyHttpApi
             Method: any
             Path: /
+            PayloadFormatVersion: 1.0
           Type: HttpApi
         ApiDeepRequest:
           Properties:
             ApiId: !Ref ProxyHttpApi
             Method: any
             Path: /{proxy+}
+            PayloadFormatVersion: 1.0
           Type: HttpApi
       Handler: index.handler
       MemorySize: 192
