Force string value

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -285,6 +285,7 @@ Resources:
     Type: AWS::Serverless::HttpApi
     Properties:
       Description: !Sub ${EnvironmentType} prx.org proxy
+      DisableExecuteApiEndpoint: true
       Tags:
         Project: upload.radiotopia.fm # TODO
         Environment: !Ref EnvironmentType
@@ -309,14 +310,14 @@ Resources:
             ApiId: !Ref ProxyHttpApi
             Method: any
             Path: /
-            PayloadFormatVersion: 1.0
+            PayloadFormatVersion: "1.0"
           Type: HttpApi
         ApiDeepRequest:
           Properties:
             ApiId: !Ref ProxyHttpApi
             Method: any
             Path: /{proxy+}
-            PayloadFormatVersion: 1.0
+            PayloadFormatVersion: "1.0"
           Type: HttpApi
       Handler: index.handler
       MemorySize: 192
