Enable default endpoint

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -285,7 +285,7 @@ Resources:
     Type: AWS::Serverless::HttpApi
     Properties:
       Description: !Sub ${EnvironmentType} prx.org proxy
-      DisableExecuteApiEndpoint: true
+      DisableExecuteApiEndpoint: false
       Tags:
         Project: upload.radiotopia.fm # TODO
         Environment: !Ref EnvironmentType
