Clean up shared ALB certificate

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -80,14 +80,12 @@ Resources:
   Certificate:
     Type: AWS::CertificateManager::Certificate
     Properties:
-      DomainName: "*.prx.org"
+      DomainName: !If [IsProduction, "*.prx.org", "*.staging.prx.tech"]
       SubjectAlternativeNames:
-        - "*.prxu.org"
-        - "*.staging.prxu.org"
-        - "*.prx.tech"
-        - "*.staging.prx.tech"
-        - "*.prx.mx"
-        - "*.pri.org"
+        - !If [IsProduction, "*.prxu.org", "*.staging.prxu.org"]
+        - !If [IsProduction, "*.prx.tech", !Ref "AWS::NoValue"]
+        - !If [IsProduction, "*.prx.mx", !Ref "AWS::NoValue"]
+        - !If [IsProduction, "*.pri.org", !Ref "AWS::NoValue"]
         - !GetAtt Constants.VanityAlbDomain
       Tags:
         - { Key: Name, Value: !Sub "${RootStackName}_shared_${Alb.LoadBalancerName}" }
