Add ASG max instance life

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -258,7 +258,7 @@ Resources:
         LaunchTemplateId: !Ref Ec2LaunchTemplate
         Version: !GetAtt Ec2LaunchTemplate.LatestVersionNumber
       # LifecycleHookSpecificationList
-      # MaxInstanceLifetime
+      MaxInstanceLifetime: 1209600 # 14 days
       MaxSize: !If
         - IsProduction
         - "40"
