Make termination policies a list

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -278,7 +278,9 @@ Resources:
         - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { PropagateAtLaunch: true, Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { PropagateAtLaunch: true, Key: prx:dev:application, Value: Common }
-      TerminationPolicies: Default
+      TerminationPolicies:
+        - Default
+        - OldestInstance
       VPCZoneIdentifier:
         - !Ref VpcPublicSubnet1Id
         - !Ref VpcPublicSubnet2Id
