--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -1,12 +1,12 @@
 # stacks/shared-ecs-asg.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: >- # TODO
+Description: >-
   Creates an Auto Scaling Group that launches EC2 instances into the shared ECS
   cluster. Also creates a capacity provider associated with the shared ECS
   cluster that helps manage the size of the ASG. Instances launched from the
   ASG allow all outbound traffic. Inbound traffic is permitted using several
-  security groups.
+  security groups. Instances in the ASG are launched in public subnets.
 
 Parameters:
   EnvironmentType: { Type: String }
@@ -275,7 +275,7 @@ Resources:
       LaunchTemplate:
         LaunchTemplateId: !Ref Ec2LaunchTemplate
         Version: !GetAtt Ec2LaunchTemplate.LatestVersionNumber
-      # LifecycleHookSpecificationList
+      # TODO LifecycleHookSpecificationList
       MaxInstanceLifetime: 1209600 # 14 days
       MaxSize: !If [IsProduction, "50", "20"]
       MetricsCollection:
