--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -35,10 +35,11 @@ Resources:
           - "*"
       Description: !Sub ${EnvironmentType} S3 upload signing API
       Tags:
-        Project: upload.radiotopia.fm
-        Environment: !Ref EnvironmentType
-        prx:cloudformation:stack-name: !Ref AWS::StackName
-        prx:cloudformation:stack-id: !Ref AWS::StackId
+        - { PropagateAtLaunch: true, Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { PropagateAtLaunch: true, Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { PropagateAtLaunch: true, Key: prx:dev:application, Value: S3 Signing Service }
   UploadHttpLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -61,10 +62,11 @@ Resources:
       MemorySize: 128
       Runtime: nodejs14.x
       Tags:
-        Project: upload.prx.org
-        Environment: !Ref EnvironmentType
-        prx:cloudformation:stack-name: !Ref AWS::StackName
-        prx:cloudformation:stack-id: !Ref AWS::StackId
+        - { PropagateAtLaunch: true, Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { PropagateAtLaunch: true, Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { PropagateAtLaunch: true, Key: prx:dev:application, Value: S3 Signing Service }
       Timeout: 5
   UploadHttpLambdaLogGroup:
     Type: AWS::Logs::LogGroup
@@ -75,14 +77,11 @@ Resources:
     Type: AWS::IAM::User
     Properties:
       Tags:
-        - Key: Project
-          Value: upload.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { PropagateAtLaunch: true, Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { PropagateAtLaunch: true, Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { PropagateAtLaunch: true, Key: prx:dev:application, Value: S3 Signing Service }
   UploadHttpSigningAccessKey:
     Type: AWS::IAM::AccessKey
     Properties:
