Fix API tags format

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -287,11 +287,11 @@ Resources:
       Description: !Sub ${EnvironmentType} proxy service
       DisableExecuteApiEndpoint: false
       Tags:
-        - { PropagateAtLaunch: true, Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { PropagateAtLaunch: true, Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { PropagateAtLaunch: true, Key: prx:dev:application, Value: Proxy }
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Proxy
   ProxyHttpLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
