Fix tags format

--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -35,11 +35,11 @@ Resources:
           - "*"
       Description: !Sub ${EnvironmentType} S3 upload signing API
       Tags:
-        - { PropagateAtLaunch: true, Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { PropagateAtLaunch: true, Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { PropagateAtLaunch: true, Key: prx:dev:application, Value: S3 Signing Service }
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: S3 Signing Service
   UploadHttpLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -62,11 +62,11 @@ Resources:
       MemorySize: 128
       Runtime: nodejs14.x
       Tags:
-        - { PropagateAtLaunch: true, Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { PropagateAtLaunch: true, Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { PropagateAtLaunch: true, Key: prx:dev:application, Value: S3 Signing Service }
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: S3 Signing Service
       Timeout: 5
   UploadHttpLambdaLogGroup:
     Type: AWS::Logs::LogGroup
@@ -77,11 +77,11 @@ Resources:
     Type: AWS::IAM::User
     Properties:
       Tags:
-        - { PropagateAtLaunch: true, Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { PropagateAtLaunch: true, Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { PropagateAtLaunch: true, Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { PropagateAtLaunch: true, Key: prx:dev:application, Value: S3 Signing Service }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: S3 Signing Service }
   UploadHttpSigningAccessKey:
     Type: AWS::IAM::AccessKey
     Properties:
