--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -46,6 +46,7 @@ Resources:
       SubjectAlternativeNames:
         - "prx.org"
         - "www.prx.org"
+        - !If [CreateStagingResources, proxy2.staging.prx.tech, !Ref "AWS::NoValue"]
       Tags:
         - Key: Project
           Value: proxy.prx.org
