Add custom API Gateway domain

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -287,6 +287,9 @@ Resources:
     Properties:
       Description: !Sub ${EnvironmentType} proxy service
       DisableExecuteApiEndpoint: false
+      Domain:
+        CertificateArn: !Ref Certificate
+        DomainName: proxy2.staging.prx.tech
       Tags:
         prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
