Roll back custom domain

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -289,7 +289,7 @@ Resources:
       DisableExecuteApiEndpoint: false
       Domain:
         CertificateArn: !Ref Certificate
-        DomainName: proxy.staging.prx.tech
+        DomainName: proxy2.staging.prx.tech
       Tags:
         prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
