Add domain name

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -340,6 +340,14 @@ Resources:
       LogGroupName: !Sub /aws/lambda/${ProxyHttpLambdaFunction}
       RetentionInDays: 60
 
+  DomainName:
+    Type: AWS::ApiGatewayV2::DomainName
+    Properties:
+      DomainName: proxy3.staging.prx.tech
+      DomainNameConfigurations:
+        - CertificateArn: !Ref Certificate
+      # TODO Tags: Json
+
 Outputs:
   ApiDomainName:
     Description: The custom API domain name
