Add domain to cert

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -47,6 +47,7 @@ Resources:
         - "prx.org"
         - "www.prx.org"
         - !If [CreateStagingResources, proxy2.staging.prx.tech, !Ref "AWS::NoValue"]
+        - !If [CreateStagingResources, proxy2b.staging.prx.tech, !Ref "AWS::NoValue"]
       Tags:
         - Key: Project
           Value: proxy.prx.org
@@ -343,10 +344,15 @@ Resources:
   DomainName:
     Type: AWS::ApiGatewayV2::DomainName
     Properties:
-      DomainName: proxy3.staging.prx.tech
+      DomainName: proxy2b.staging.prx.tech
       DomainNameConfigurations:
         - CertificateArn: !Ref Certificate
-      # TODO Tags: Json
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Proxy }
 
 Outputs:
   ApiDomainName:
