Add domain mapping

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -353,6 +353,12 @@ Resources:
         prx:cloudformation:stack-id: !Ref AWS::StackId
         prx:ops:environment: !Ref EnvironmentType
         prx:dev:application: Proxy
+  Mapping:
+    Type: AWS::ApiGatewayV2::ApiMapping
+    Properties:
+      ApiId: !Ref ProxyHttpApi
+      DomainName: proxy2b.staging.prx.tech
+      Stage: $default
 
 Outputs:
   ApiDomainName:
