--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
       nodejs: 12
     commands:
       - "cd $(ls -d */|head -n 1)"
-      - "cd notifications/slack && npm install && cd ../../"
+      - "cd devops/chat-ops/slack-app && npm install && cd ../../"
       - "npm install"
       - "pip3 install -r requirements.txt"
   build:
